# Geometric-Bayesian-Framework-with-Force-measurement-Data-on-Pose-Estimation

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: README.md
data/real_experiments/: README.md
docs/: migration_notes.md  paper_repository_note.md
experiments/: README.md  common.py  make_data_manifest.py  run_smoke_demos.py  summarize_paper_results.py
notebooks/Posterior Estimation/: Conditional_plot_forEx2C__b_mild_case.ipynb  New_3Dcase_Ex2A.ipynb  New_3Dcase_Ex2B.ipynb  New_3Dcase_Ex2C.ipynb  New_3Dcase_Ex2C_b.ipynb  New_3Dcase_Ex2C_mild_seed_sweep_conditional.ipynb  Revised2_Multiseed_forEx2A.ipynb  Revised3_Multiseed_forEx2B.ipynb  Revised4_Multiseed_forEx2C.ipynb  Revised5_Multiseed_forEx2C_b_main_plot.ipynb  Revised_main_mfg_post.ipynb  exp1_multiseed_nested_K_records_partial.json  exp1_sparse_K_algorithmic_validation_records.json  exp1_standalone_sparse_K_ablation_records.json  exp2A_noise_robustness_records.json  exp2B_noise_model_mismatch_records.json  exp2CB_false_confidence_seed44_F_sequence.npz  exp2CB_false_confidence_seed44_F_snapshots_for_MF_visualization.npz  exp2CB_mild_seed44_posterior_trace_records.json  experiment2_candidate_selection_records.json  experiment2_records_partial.json  experiment2_records_tableIV_protocol_info_guided.json  main_mfg_post.ipynb  new_exp2CB_false_confidence_seed44_F_snapshots_for_MF_visualization.npz  new_exp2CB_false_confidence_seed45_46_sweep_records.json  (+12 more)
scripts/: _demo_setup.py  run_alg1.py  run_alg2.py  run_sampling_demo.py
(+39 files in other folders)
