[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mfg-pose-estimation"
version = "0.1.0"
description = "Notebook for MFG posterior inference and sampling on SO(3) x R^3."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6",
    "jupyterlab>=4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
